# scion

./: BUILD.bazel  MODULE.bazel  TODO.md  WORKSPACE  go.mod  go.sum  go_deps.bzl  nogo.json  scion.sh
acceptance/sig_failover/: BUILD.bazel
acceptance/sig_short_exp_time/: BUILD.bazel
acceptance/topo_cs_reload/: BUILD.bazel
acceptance/topo_sd_reload/: BUILD.bazel
control/: BUILD.bazel  observability.go
control/beacon/: store.go  store_test.go
control/beaconing/: writer.go
control/cmd/control/: BUILD.bazel  main.go
control/onehop/: addr.go
control/trust/: signer_gen.go
daemon/: BUILD.bazel  daemon.go
daemon/cmd/daemon/: BUILD.bazel  main.go  metrics.go
daemon/context/: BUILD.bazel  context.go
daemon/drkey/: BUILD.bazel
daemon/fetcher/: fetcher.go
daemon/internal/servers/: BUILD.bazel  grpc.go  metrics.go
demo/drkey/: main.go
docker/perapp/: BUILD.bazel  scion_app.bzl
docker/testimages/: BUILD.bazel
gateway/: BUILD.bazel  gateway.go  metrics.go
go/acceptance/: sigcmn.go
go/beacon_srv/: main.go
go/border/: main.go  router.go  setup-posix.go  setup.go
go/border/brconf/: BUILD.bazel  conf.go  params.go
go/border/rctrl/: BUILD.bazel  ctrl.go  ifstate.go
go/border/rctx/: BUILD.bazel  rctx.go
go/border/rpkt/: addr.go  extn_packet_security.go  extn_scmp_auth_drkey.go  extn_scmp_auth_hashtree.go  extns.go  l4.go  parse.go  path.go  process.go  route.go  validate.go
go/cert_srv/: main.go  setup.go
go/examples/discovery_client/: client.go
go/godispatcher/: BUILD.bazel  main.go
go/godispatcher/network/: app_socket.go  dispatcher.go  overlay.go
go/integration/cert_req/: BUILD.bazel  main.go
go/integration/end2end/: main.go
go/integration/end2end_integration/: BUILD.bazel  main.go
go/lib/addr/: isdas.go
go/lib/common/: validate.go
go/lib/config/: BUILD.bazel  config.go
go/lib/ctrl/: BUILD.bazel  ctrl.go  signed.go  signed_util.go  union.go
go/lib/discovery/: discovery.go
go/lib/env/: BUILD.bazel  env.go  logging.go
go/lib/healthpool/: pool.go
go/lib/hiddenpath/: BUILD.bazel
go/lib/hpkt/: extension.go  read.go  write.go
go/lib/integration/: BUILD.bazel  binary.go
go/lib/keyconf/: keyconf.go
go/lib/l4/: BUILD.bazel  common.go  udp.go
go/lib/layers/: debug_extn.go  extensions.go  extensions_layer.go
go/lib/log/: log.go
go/lib/overlay/: addr.go  defs.go
go/lib/pathpol/: acl.go  hop_pred.go  policy.go  sequence.go
go/lib/pathstorage/: BUILD.bazel  pathstorage.go  sample.go
go/lib/pktcls/: json.go  pred_ipv4.go
go/lib/revcache/: revcache.go
go/path_srv/: BUILD.bazel  main.go
go/proto/: BUILD.bazel  cereal.go  structs.gen.go  structs_gen_go.sh
go/sciond/: BUILD.bazel  main.go
go/sig/: BUILD.bazel  main.go
go/tools/dump_db/: BUILD.bazel  main.go
pkg/daemon/: BUILD.bazel  daemon.go  grpc.go
pkg/grpc/: BUILD.bazel  dialer.go  interceptor.go
pkg/log/: BUILD.bazel
pkg/slayers/: scmp.go  scmp_msg.go  udp.go
pkg/snet/: BUILD.bazel  not_fragmented.go  packet.go  packet_conn.go  path.go  reply_pather.go  snet.go
private/app/: sequence.go
private/revcache/: BUILD.bazel  revcache.go  util.go  util_test.go
private/storage/: storage.go
private/svc/: resolver.go
private/topology/: BUILD.bazel  reload_test.go
private/trust/: fetching_provider.go
rules_openapi/: BUILD.bazel  dependencies.bzl  install.bzl  repositories.bzl
rules_openapi/tools/: BUILD.bazel  package.json  pnpm-lock.yaml
scion-pki/certs/: BUILD.bazel  certs.go  create.go  renew.go  request.go  sign.go
scion-pki/trcs/: sign.go
scion/showpaths/: showpaths.go
tools/: gomocks
tools/integration/: docker.go
(+331 files in other folders)
