load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")
load("@package_bundle//file:packages.bzl", "packages")

pkg_tar(
    name = "app_base_files",
    srcs = [
        "@com_github_anapaya_su_exec//:su-exec",
    ],
    mode = "0755",
    remap_paths = {
        "": "sbin",
    },
)

pkg_tar(
    name = "sig_docker_files",
    srcs = ["//go/sig"],
    package_dir = "/app",
)

filegroup(
    name = "sig_entrypoint_files",
    srcs = ["sig.sh"],
)

pkg_tar(
    name = "sig_entrypoint",
    srcs = [":sig_entrypoint_files"],
    package_dir = "/share",
)

container_image(
    name = "scion_sig_acceptance_nocap",
    base = "@ubuntu16//image",
    debs = [
        packages["libc6"],
        # needed by su-exec
        packages["libgcc1"],
        packages["libstdc++6"],
        # needed for sig.sh
        # ping and its dependencies
        packages["iputils-ping"],
        packages["libidn11"],
        packages["libnettle6"],
        # iproute2 and its dependencies
        packages["iproute2"],
        packages["libelf1"],
        packages["libmnl0"],
    ],
    entrypoint = ["./sig.sh"],
    env = {"TZ": "UTC"},
    stamp = True,
    tars = [
        ":app_base_files",
        ":sig_docker_files",
        ":sig_entrypoint",
    ],
    workdir = "/share",
)

filegroup(
    name = "tester_setup_script",
    srcs = ["tester.sh"],
)

pkg_tar(
    name = "tester_shared_scripts",
    srcs = [
        ":tester_setup_script",
    ],
    package_dir = "/share",
)

pkg_tar(
    name = "tester_integration_scripts",
    srcs = [
        "//integration:bin_wrapper_script",
    ],
    package_dir = "/share/integration",
)

pkg_tar(
    name = "tester_binaries",
    srcs = [
        "//go/examples/pingpong",
        "//go/integration/cert_req",
        "//go/integration/end2end",
        "//go/tools/scmp",
        "//go/tools/showpaths",
    ],
    package_dir = "/share/bin",
)

container_image(
    name = "scion_tester",
    base = "@ubuntu16//image",
    cmd = "tail -f /dev/null",
    debs = [
        packages["libc6"],
        # needed by su-exec
        packages["libgcc1"],
        packages["libstdc++6"],
        # needed for tester.sh
        # ping and its dependencies
        packages["iputils-ping"],
        packages["libidn11"],
        packages["libnettle6"],
        # iproute2 and its dependencies
        packages["iproute2"],
        packages["libelf1"],
        packages["libmnl0"],
    ],
    env = {"TZ": "UTC"},
    stamp = True,
    tars = [
        ":app_base_files",
        ":tester_shared_scripts",
        ":tester_integration_scripts",
        ":tester_binaries",
    ],
    workdir = "/share",
)

container_bundle(
    name = "scion_testing_bundle",
    images = {
        "scion_sig_acceptance_nocap:latest": ":scion_sig_acceptance_nocap",
        "scion_tester:latest": ":scion_tester",
    },
)
