load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/tools/dump_db",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/ctrl/seg:go_default_library",
        "//go/lib/pathdb/sqlite:go_default_library",
        "//go/lib/serrors:go_default_library",
    ],
)

go_binary(
    name = "dump_db",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
